<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.audiobookclub.FriendDetailsActivity">

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/friend_details_description" />

    <Button
        android:id="@+id/library_button"
        style="@style/ButtonStyle"
        android:text="@string/library" />

    <Button
        android:id="@+id/book_details_button"
        style="@style/ButtonStyle"
        android:text="@string/book_details" />

    <Button
        android:id="@+id/store_button"
        style="@style/ButtonStyle"
        android:text="@string/store" />
</LinearLayout>
